--- a/index.html
+++ b/index.html
@@ -28,9 +28,23 @@
   <body>
     <main>
       <article class="card-container">
-        Learning Published 21 Dec 2023 HTML & CSS foundations These languages
-        are the backbone of every website, defining structure, content, and
-        presentation. Greg Hooper
+        <header class="card-header"></header>
+        <div class="card-body">
+          <div class="learning">
+            <p>Learning</p>
+          </div>
+          <div class="publish">
+            <p>Published 21 Dec 2023</p>
+          </div>
+          <h1>HTML & CSS foundations</h1>
+          <p>
+            These languages are the backbone of every website, defining
+            structure, content, and presentation.
+          </p>
+          <div class="author">
+            <h2>Greg Hooper</h2>
+          </div>
+        </div>
       </article>
     </main>
 
