--- a/index.html
+++ b/index.html
@@ -13,35 +13,38 @@
     />
 
     <title>Frontend Mentor | Blog preview card</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
       <article class="card-container">
-        <header class="card-header"></header>
+        <header class="card-header">
+          <img
+            src="./assets/images/illustration-article.svg"
+            alt="article illustration"
+          />
+        </header>
+
         <div class="card-body">
-          <div class="learning">
+          <div class="structure" id="learning">
             <p>Learning</p>
           </div>
-          <div class="publish">
+          <div class="structure" id="publish">
             <p>Published 21 Dec 2023</p>
           </div>
-          <h1>HTML & CSS foundations</h1>
-          <p>
+          <h1 class="structure">HTML & CSS foundations</h1>
+          <p class="structure" id="description">
             These languages are the backbone of every website, defining
             structure, content, and presentation.
           </p>
-          <div class="author">
+          <div class="structure" id="author">
+            <img src="./assets/images/image-avatar.webp" alt="author face" />
             <h2>Greg Hooper</h2>
           </div>
         </div>
@@ -52,7 +55,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Fachrezi</a>.
     </footer>
   </body>
 </html>
